[tool.poetry]
name = "burdalev"
version = "0.1.0"
description = ""
authors = ["tishka <alex.gromov2@mail.ru>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
sqlalchemy = "^2.0.34"
alembic = "^1.13.2"
psycopg = "^3.2.1"
psycopg-binary = "^3.2.1"
greenlet = "^3.1.0"
pydantic-settings = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
